# gundi-webhook-editor

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  app.py  auth.py  docker-compose.yml  firebase.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
infra/: dev.auto.tfvars  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
static/css/: style.css
static/js/: app.js  help-drawer.js  jq-examples.js  jq-language.js  jq-reference.js
templates/: index.html  webhook_not_found.html
