[project]
name = "jq-editor"
version = "0.1.0"
description = "A web app for creating, editing, and testing jq filters against JSON documents"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "fastapi-sessions",
    "uvicorn==0.24.0",
    "pydantic==2.5.2",
    "python-dotenv==1.0.1",
    "jq==1.6.0",
    "jinja2==3.1.2",
]
